# vanir

./: .gitignore  CMakeLists.txt
benchmark/: CMakeLists.txt  nanobench.h  test.cpp
cmake/: CppModules.cmake
include/windows/: main.h
modules/: CMakeLists.txt  tmp.ixx
modules/base/: bitfield.ixx  static_vector.ixx
modules/base/algorithm/: bit_manip.ixx  charutils.ixx  stringutils.ixx
modules/base/algorithm/strings/: modifying.ixx  nonmodifying.ixx  tokenzr.ixx  unsafe.ixx
modules/geometry/: CMakeLists.txt  geometry.ixx
modules/geometry/base/: arc.ixx  circle.ixx  curve.ixx  ellipse.ixx  line.ixx  point.ixx  polygon.ixx  polyline.ixx  rect.ixx  segment.ixx  shapes.ixx  triangle.ixx
modules/geometry/operations/: general_op.ixx  operations.ixx  vector_op.ixx
modules/pupple/: Pupple-Algorithm.ixx  Pupple-Element.ixx  Pupple-Impl.ixx  Pupple.ixx  meta_element.ixx  meta_map.ixx  new_pupple.ixx  pupple.ixx  pupple_algorithm.ixx
modules/stdlib/: stdlib.ixx
modules/tmp/: always.ixx  call.ixx  comparison.ixx  decay.ixx  fusion.ixx  identity.ixx  if.ixx  lift.ixx  list_operations.ixx  logic.ixx  pack.ixx  tmp_base.ixx  try.ixx  vocabulary.ixx  while.hpp
modules/tmp/algorithm/: all_of.ixx  any_of.ixx  clamp.ixx  contains.ixx  count_if.ixx  extrema.ixx  filter.ixx  find_if.ixx  flatten.ixx  fold_left.ixx  fold_right.ixx  gather.ixx  none_of.ixx  pairing.ixx  partition.hpp  partition.ixx  product.ixx  range_math.ixx  remove_if.hpp  remove_if.ixx  remove_pairs.ixx  repeat.hpp  replace_if.hpp  replace_if.ixx  sort.ixx  symmetric_difference.ixx  tmp_algorithm.ixx  transform.ixx
modules/tmp/detail/: capabilities.hpp  detail.ixx  dispatch.ixx  expression.hpp  fusion_execute.hpp  fusion_rebind.hpp
modules/tmp/fusion/: contains.hpp  filter.hpp  find_if.hpp
modules/tmp/sequence/: container.ixx  drop.ixx  each.ixx  erase.ixx  index.ixx  insert.ixx  join.ixx  make_sequence.ixx  pop_back.ixx  pop_front.ixx  push_back.ixx  push_front.ixx  repeat_sequence.ixx  reverse.ixx  rotate.ixx  sequence.ixx  set.ixx  size.ixx  swap.ixx  take.ixx  tee.ixx  unpack.ixx  zip.ixx  zip_with_index.ixx
modules/tmp_units/: CMakeLists.txt  atomize.hpp  composite.hpp  crtp.hpp  moleculize.hpp  named_type_impl.hpp  primaries.hpp  tmp_units.ixx  underlying_functionalities.hpp  unit_descr.hpp  units.hpp
modules/tmp_units/engine/: base.ixx  conversions.ixx  engine_tmp.ixx  evaluators.ixx  forward_types.ixx  operators.ixx  tmp_all_units.ixx  type_dispatcher.ixx
modules/tmp_units/example/: electronics.cpp
modules/tmp_units/generator/: Units_Library.xlsx  __init__.py  classes.py  generate_units.py  mapping.py
modules/tmp_units/test/: atomize_test.hpp  include_all_units.hpp  test.cpp
modules/tmp_units/units/: anything.ixx  base_unit.ixx  tmp_all_units.ixx
modules/tmp_units/units/SI/base/: absorbed_dose.ixx  amount_of_substance.hpp  amount_of_substance.ixx  capacitance.hpp  capacitance.ixx  catalytic_activity.hpp  catalytic_activity.ixx  conductance.hpp  conductance.ixx  dose equivalent.hpp  electric_charge.hpp  electric_charge.ixx  electric_current.hpp  electric_current.ixx  electromotive_force.hpp  electromotive_force.ixx  energy.hpp  energy.ixx  force.hpp  force.ixx  frequency.hpp  frequency.ixx  illuminance.hpp  illuminance.ixx  inductance.hpp  inductance.ixx  length.hpp  length.ixx  luminous_flux.hpp  luminous_flux.ixx  luminous_intensity.hpp  luminous_intensity.ixx  magnetic_flux.hpp  magnetic_flux.ixx  magnetic_flux_density.hpp  magnetic_flux_density.ixx  mass.hpp  mass.ixx  plane_angle.hpp  plane_angle.ixx  (+12 more)
modules/tmp_units/units/SI/derived/: absorbed_dose_rate.hpp  absorbed_dose_rate.ixx  acceleration.hpp  acceleration.ixx  action.hpp  action.ixx  angular_acceleration.hpp  angular_acceleration.ixx  angular_velocity.hpp  angular_velocity.ixx  area.hpp  area.ixx  catalytic_activity_concentration.hpp  catalytic_activity_concentration.ixx  catalytic_efficiency.hpp  catalytic_efficiency.ixx  compressibility.hpp  concentration.hpp  concentration.ixx  current_density.hpp  current_density.ixx  density.hpp  density.ixx  dynamic_viscosity.hpp  dynamic_viscosity.ixx  electric_charge_density.hpp  electric_charge_density.ixx  electric_field_strength.hpp  electric_field_strength.ixx  electric_flux.hpp  electric_flux.ixx  electrical_conductivity.hpp  electrical_conductivity.ixx  energy_density.hpp  energy_flux_density.hpp  energy_flux_density.ixx  exposure.hpp  exposure.ixx  frequency_drift.hpp  frequency_drift.ixx  (+83 more)
modules/utility/: three_way_impl.ixx
modules/win/: unique_hnd.ixx  windef.ixx  window_styles.ixx
modules/windows/: unique_hnd.ixx  windef.ixx  window_styles.ixx
tests/: CMakeLists.txt  metatest.ixx  test.cpp  ut.ixx
tests/base/: bitfieldtest.cpp
tests/base/algorithm/: strutils.cpp
tests/base/geometry/: shapes.cpp
tests/metatest/: metatest.ixx
tests/pupple/: element_test.cpp  map_test.cpp  pupple_algorithm_test.cpp  pupple_test.cpp
tests/tmp/: all_of_test.hpp  all_of_test.ixx  any_of_test.hpp  any_of_test.ixx  clamp_test.hpp  clamp_test.ixx  contains_test.hpp  contains_test.ixx  count_if_test.hpp  count_if_test.ixx  drop_test.hpp  drop_test.ixx  each_test.hpp  each_test.ixx  erase_test.hpp  erase_test.ixx  extrema_test.hpp  extrema_test.ixx  filter_test.hpp  filter_test.ixx  find_if_test.hpp  find_if_test.ixx  flatten_test.hpp  flatten_test.ixx  fold_left_test.hpp  fold_left_test.ixx  fold_right_test.hpp  fold_right_test.ixx  index_test.hpp  index_test.ixx  insert_test.hpp  insert_test.ixx  join_test.hpp  join_test.ixx  logic_test.hpp  logic_test.ixx  none_of_test.hpp  none_of_test.ixx  partition_test.hpp  partition_test.ixx  (+41 more)
tests/tmp_units/: test.cpp  tmp_unit_test.cpp
tests/windows/: CMakeLists.txt  main_test.ixx
