
set(TMP_UNITS_ENGINE_IXX
${TMP_UNITS_DIR}/engine/base.ixx
${TMP_UNITS_DIR}/engine/conversions.ixx
${TMP_UNITS_DIR}/engine/evaluators.ixx
${TMP_UNITS_DIR}/engine/operators.ixx
${TMP_UNITS_DIR}/engine/type_dispatcher.ixx
${TMP_UNITS_DIR}/engine/engine_tmp.ixx
)

set(TMP_UNITS_ANY_IXX
${TMP_UNITS_DIR}/units/anything.ixx
${TMP_UNITS_DIR}/units/tmp_all_units.ixx
${TMP_UNITS_DIR}/tmp_units.ixx
)

set(TMP_UNITS_BASE_SI_IXX
${TMP_UNITS_DIR}/units/SI/base/absorbed_dose.ixx
${TMP_UNITS_DIR}/units/SI/base/amount_of_substance.ixx
${TMP_UNITS_DIR}/units/SI/base/capacitance.ixx
${TMP_UNITS_DIR}/units/SI/base/catalytic_activity.ixx
${TMP_UNITS_DIR}/units/SI/base/conductance.ixx
${TMP_UNITS_DIR}/units/SI/base/electric_charge.ixx
${TMP_UNITS_DIR}/units/SI/base/electric_current.ixx
${TMP_UNITS_DIR}/units/SI/base/electromotive_force.ixx
${TMP_UNITS_DIR}/units/SI/base/energy.ixx
${TMP_UNITS_DIR}/units/SI/base/force.ixx
${TMP_UNITS_DIR}/units/SI/base/frequency.ixx
${TMP_UNITS_DIR}/units/SI/base/illuminance.ixx
${TMP_UNITS_DIR}/units/SI/base/inductance.ixx
${TMP_UNITS_DIR}/units/SI/base/length.ixx
${TMP_UNITS_DIR}/units/SI/base/luminous_flux.ixx
${TMP_UNITS_DIR}/units/SI/base/luminous_intensity.ixx
${TMP_UNITS_DIR}/units/SI/base/magnetic_flux_density.ixx
${TMP_UNITS_DIR}/units/SI/base/magnetic_flux.ixx
${TMP_UNITS_DIR}/units/SI/base/mass.ixx
${TMP_UNITS_DIR}/units/SI/base/plane_angle.ixx
${TMP_UNITS_DIR}/units/SI/base/power.ixx
${TMP_UNITS_DIR}/units/SI/base/pressure.ixx
${TMP_UNITS_DIR}/units/SI/base/radionuclide_activity.ixx
${TMP_UNITS_DIR}/units/SI/base/resistance.ixx
${TMP_UNITS_DIR}/units/SI/base/solid_angle.ixx
${TMP_UNITS_DIR}/units/SI/base/time.ixx
)

set(TMP_UNITS_BASE_SI_DERIVED_IXX
${TMP_UNITS_DIR}/units/SI/derived/absorbed_dose_rate.ixx
${TMP_UNITS_DIR}/units/SI/derived/acceleration.ixx
${TMP_UNITS_DIR}/units/SI/derived/action.ixx
${TMP_UNITS_DIR}/units/SI/derived/angular_acceleration.ixx
${TMP_UNITS_DIR}/units/SI/derived/angular_velocity.ixx
${TMP_UNITS_DIR}/units/SI/derived/area.ixx
${TMP_UNITS_DIR}/units/SI/derived/catalytic_activity_concentration.ixx
${TMP_UNITS_DIR}/units/SI/derived/catalytic_efficiency.ixx
${TMP_UNITS_DIR}/units/SI/derived/concentration.ixx
${TMP_UNITS_DIR}/units/SI/derived/current_density.ixx
${TMP_UNITS_DIR}/units/SI/derived/density.ixx
${TMP_UNITS_DIR}/units/SI/derived/dynamic_viscosity.ixx
${TMP_UNITS_DIR}/units/SI/derived/electric_charge_density.ixx
${TMP_UNITS_DIR}/units/SI/derived/electric_field_strength.ixx
${TMP_UNITS_DIR}/units/SI/derived/electric_flux.ixx
${TMP_UNITS_DIR}/units/SI/derived/electrical_conductivity.ixx
${TMP_UNITS_DIR}/units/SI/derived/energy_flux_density.ixx
${TMP_UNITS_DIR}/units/SI/derived/exposure.ixx
${TMP_UNITS_DIR}/units/SI/derived/frequency_drift.ixx
${TMP_UNITS_DIR}/units/SI/derived/heat_capacity.ixx
${TMP_UNITS_DIR}/units/SI/derived/jerk.ixx
${TMP_UNITS_DIR}/units/SI/derived/linear_charge_density.ixx
${TMP_UNITS_DIR}/units/SI/derived/luminous_efficacy.ixx
${TMP_UNITS_DIR}/units/SI/derived/luminous_energy.ixx
${TMP_UNITS_DIR}/units/SI/derived/luminous_exposure.ixx
${TMP_UNITS_DIR}/units/SI/derived/magnetic_dipole_moment.ixx
${TMP_UNITS_DIR}/units/SI/derived/magnetic_field_strength.ixx
${TMP_UNITS_DIR}/units/SI/derived/magnetic_moment.ixx
${TMP_UNITS_DIR}/units/SI/derived/magnetic_rigidity.ixx
${TMP_UNITS_DIR}/units/SI/derived/magnetic_susceptibility.ixx
${TMP_UNITS_DIR}/units/SI/derived/magnetomotive_force.ixx
${TMP_UNITS_DIR}/units/SI/derived/molality.ixx
${TMP_UNITS_DIR}/units/SI/derived/molar_conductivity.ixx
${TMP_UNITS_DIR}/units/SI/derived/molar_energy.ixx
${TMP_UNITS_DIR}/units/SI/derived/molar_heat_capacity.ixx
${TMP_UNITS_DIR}/units/SI/derived/molar_mass.ixx
${TMP_UNITS_DIR}/units/SI/derived/molar_volume.ixx
${TMP_UNITS_DIR}/units/SI/derived/moment_of_inertia.ixx
${TMP_UNITS_DIR}/units/SI/derived/momentum.ixx
${TMP_UNITS_DIR}/units/SI/derived/permeability.ixx
${TMP_UNITS_DIR}/units/SI/derived/permittivity.ixx
${TMP_UNITS_DIR}/units/SI/derived/radiance.ixx
${TMP_UNITS_DIR}/units/SI/derived/radiant_exposure.ixx
${TMP_UNITS_DIR}/units/SI/derived/radiant_intensity.ixx
${TMP_UNITS_DIR}/units/SI/derived/resistivity.ixx
${TMP_UNITS_DIR}/units/SI/derived/snap.ixx
${TMP_UNITS_DIR}/units/SI/derived/specific_heat_capacity.ixx
${TMP_UNITS_DIR}/units/SI/derived/specific_angular_momentum.ixx
${TMP_UNITS_DIR}/units/SI/derived/specific_volume.ixx
${TMP_UNITS_DIR}/units/SI/derived/spectral_irradiance.ixx
${TMP_UNITS_DIR}/units/SI/derived/spectral_radiance.ixx
${TMP_UNITS_DIR}/units/SI/derived/surface_charge_density.ixx
${TMP_UNITS_DIR}/units/SI/derived/surface_density.ixx
${TMP_UNITS_DIR}/units/SI/derived/temperature_gradient.ixx
${TMP_UNITS_DIR}/units/SI/derived/thermal_conductivity.ixx
${TMP_UNITS_DIR}/units/SI/derived/velocity.ixx
${TMP_UNITS_DIR}/units/SI/derived/volume.ixx
${TMP_UNITS_DIR}/units/SI/derived/yank.ixx
)

add_library(tmp_units_lib INTERFACE)

target_sources(tmp_units_lib
PUBLIC
    ${TMP_UNITS_ENGINE_IXX}
    ${TMP_UNITS_IXX}
    ${TMP_UNITS_ANY_IXX}
    ${TMP_UNITS_BASE_SI_IXX}
    ${TMP_UNITS_BASE_SI_DERIVED_IXX}
)

target_link_libraries(tmp_units_lib
INTERFACE
    nil_tmp
)
