

# add_executable(WindowsTests)

# target_sources(WindowsTests
#     PRIVATE FILE_SET boost_tmp_modules TYPE CXX_MODULES FILES
#     main_test.ixx
# )

# target_link_libraries(WindowsTests
#     PRIVATE
#         nilbase
#         MetaTestLib
# )

# target_compile_options(WindowsTests PRIVATE /reference std=C:/dev/STL/std.ifc)

# target_link_options(WindowsTests
#     PRIVATE
#         "/SUBSYSTEM:WINDOWS"
# )
